[gd_scene load_steps=21 format=3 uid="uid://bf82i7afuhjgv"]

[ext_resource type="PackedScene" uid="uid://caoq6g60jn1l2" path="res://Player.tscn" id="1"]
[ext_resource type="Script" path="res://Main.gd" id="1_wy677"]
[ext_resource type="PackedScene" uid="uid://c87qtdkjf0d3n" path="res://Mob.tscn" id="2_f1l4o"]
[ext_resource type="Material" uid="uid://eo6rw20ultst" path="res://art/pupil.material" id="3_jq8u1"]
[ext_resource type="Theme" uid="uid://b3kq74llqlv3x" path="res://themes/MinimalUI4/MinimalUI.tres" id="4_d7m7r"]
[ext_resource type="Theme" uid="uid://bcv2ny2u6crhk" path="res://themes/Baloo Black/Baloo Black.tres" id="5_rxscc"]
[ext_resource type="FontFile" uid="uid://d0a4j0rs1n4g4" path="res://fonts/Baloo2-Medium.ttf" id="6_njn0g"]
[ext_resource type="Script" path="res://ScoreLabel.gd" id="6_vdt8b"]
[ext_resource type="AudioStream" uid="uid://cl00gch0j6ojy" path="res://art/squash.wav" id="9_00kop"]
[ext_resource type="AudioStream" uid="uid://c0vt23tk4oy0v" path="res://art/gameover.wav" id="10_8j3k2"]
[ext_resource type="AudioStream" uid="uid://cj8kk70qntyim" path="res://art/music.wav" id="11_dxqfa"]
[ext_resource type="AudioStream" uid="uid://c85xdu8wb7q6l" path="res://art/jump.wav" id="12_m65ok"]
[ext_resource type="AudioStream" uid="uid://dsxsexrqh3knp" path="res://art/hit.wav" id="13_nbm36"]

[sub_resource type="BoxMesh" id="2"]
material = ExtResource("3_jq8u1")

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(60, 1, 60)

[sub_resource type="BoxShape3D" id="BoxShape3D_118ta"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eirqe"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ks8ys"]

[sub_resource type="Curve3D" id="Curve3D_feojl"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -20, 0, -20, 0, 0, 0, 0, 0, 0, 20, 0, -20, 0, 0, 0, 0, 0, 0, 20, 0, 20, 0, 0, 0, 0, 0, 0, -20, 0, 20, 0, 0, 0, 0, 0, 0, -20, 0, -20),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="LabelSettings" id="LabelSettings_vl1d4"]
line_spacing = -20.0
font = ExtResource("6_njn0g")
font_size = 32
font_color = Color(0, 0, 0, 1)
outline_size = 1
shadow_size = 0
shadow_color = Color(1, 1, 1, 0.533333)

[node name="Main" type="Node3D"]
script = ExtResource("1_wy677")
mob_scene = ExtResource("2_f1l4o")

[node name="Ground" type="StaticBody3D" parent="."]
collision_layer = 4
collision_mask = 0
metadata/_edit_lock_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Ground"]
transform = Transform3D(60, 0, 0, 0, 1, 0, 0, 0, 60, 0, -1, 0)
mesh = SubResource("2")
surface_material_override/0 = ExtResource("3_jq8u1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("1")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 10, 0, 0, 0, 40, -20, 0, 0)
shape = SubResource("BoxShape3D_118ta")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(1, 0, 0, 0, 10, 0, 0, 0, 40, 20, 0, 0)
shape = SubResource("BoxShape3D_118ta")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(-4.37114e-08, 0, 40, 0, 10, 0, -1, 0, -1.74846e-06, 0, 0, 20)
shape = SubResource("BoxShape3D_118ta")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="Ground"]
transform = Transform3D(-4.37114e-08, 0, 40, 0, 10, 0, -1, 0, -1.74846e-06, 0, 0, -20)
shape = SubResource("BoxShape3D_118ta")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 30, 30, 30)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 7.02133)

[node name="Marker3D" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.406737, 0.913546, 0, -0.913546, 0.406737, 0, 12, 12)

[node name="Camera3D" type="Camera3D" parent="Marker3D"]
current = true
fov = 66.0
near = 0.1

[node name="Cylinders" type="Node3D" parent="."]
metadata/_edit_lock_ = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, 20)
material_override = SubResource("StandardMaterial3D_eirqe")
mesh = SubResource("CylinderMesh_ks8ys")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 0, -20)
material_override = SubResource("StandardMaterial3D_eirqe")
mesh = SubResource("CylinderMesh_ks8ys")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, -20)
material_override = SubResource("StandardMaterial3D_eirqe")
mesh = SubResource("CylinderMesh_ks8ys")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -20, 0, 20)
material_override = SubResource("StandardMaterial3D_eirqe")
mesh = SubResource("CylinderMesh_ks8ys")

[node name="SpawnPath" type="Path3D" parent="."]
curve = SubResource("Curve3D_feojl")

[node name="SpawnLocation" type="PathFollow3D" parent="SpawnPath"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -20, 0, -20)

[node name="MobTimer" type="Timer" parent="."]
autostart = true

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0
theme = ExtResource("5_rxscc")

[node name="Retry" type="ColorRect" parent="UserInterface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0.639216, 0.376471, 0.823529)

[node name="Button" type="Button" parent="UserInterface/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "  ‚èé Retry   "

[node name="ScoreLabel" type="Label" parent="UserInterface"]
layout_mode = 0
offset_left = 16.0
offset_top = 8.0
offset_right = 76.0
offset_bottom = 31.0
theme = ExtResource("4_d7m7r")
label_settings = SubResource("LabelSettings_vl1d4")
script = ExtResource("6_vdt8b")

[node name="Squash" type="AudioStreamPlayer" parent="UserInterface/ScoreLabel"]
stream = ExtResource("9_00kop")

[node name="Gameover" type="AudioStreamPlayer" parent="UserInterface/ScoreLabel"]
stream = ExtResource("10_8j3k2")
volume_db = -3.0

[node name="Music" type="AudioStreamPlayer" parent="UserInterface/ScoreLabel"]
stream = ExtResource("11_dxqfa")
volume_db = -6.0
autoplay = true

[node name="Jump" type="AudioStreamPlayer" parent="UserInterface/ScoreLabel"]
stream = ExtResource("12_m65ok")
volume_db = -6.0

[node name="Hit" type="AudioStreamPlayer" parent="UserInterface/ScoreLabel"]
stream = ExtResource("13_nbm36")
volume_db = 6.0

[connection signal="hit" from="Player" to="UserInterface/ScoreLabel" method="_on_player_hit"]
[connection signal="jump" from="Player" to="UserInterface/ScoreLabel" method="_on_player_jump"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="pressed" from="UserInterface/Retry/Button" to="." method="_on_button_pressed"]
[connection signal="show_retry" from="UserInterface/ScoreLabel" to="." method="_on_score_label_show_retry"]
